test: 테스트 코드 코드스멜개선